# comet-cc

./: .gitignore  LICENSE  README.md  pyproject.toml
comet_cc/: __init__.py  cli.py  client.py  config.py  daemon.py  daemon_mgmt.py  parser.py  schemas.py
comet_cc/core/: bundle_synth.py  compacter.py  detail.py  retriever.py  sensor.py  store.py  vector.py
comet_cc/hooks/: __init__.py  _common.py  pre_compact.py  session_start.py  stop.py  user_prompt.py
comet_cc/policies/: __init__.py
comet_cc/proxy/: __init__.py  cert.py  extractor.py  server.py  session.py  trim.py
comet_cc/templates/: cognitive_load.txt  compacting_base.txt
comet_cc/web/: __init__.py  server.py
comet_cc/web/static/: index.html
examples/: settings.json
scripts/: demo.sh  demo_seed_graph.py  setup-gui-env.sh  setup_throwaway.sh
skills/comet-cc-memory/: SKILL.md
tests/: daemon_multipass.py  hook_dryrun.py  multiturn_live.py  real_llm.py  smoke.py
