[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comet-cc"
version = "0.1.0"
description = "Persistent memory layer for Claude Code — local TLS proxy + sensor/compacter/retriever + BGE-M3 embedder"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Dirac" }]
dependencies = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.24",
    "loguru>=0.7",
    "aiohttp>=3.10",
    "httpx>=0.27",
    "cryptography>=43",
]

[project.scripts]
comet-cc = "comet_cc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["comet_cc"]

[tool.hatch.build.targets.wheel.force-include]
"comet_cc/templates" = "comet_cc/templates"
"comet_cc/web/static" = "comet_cc/web/static"

[tool.hatch.build.targets.wheel.shared-data]
"skills/comet-cc-memory" = "share/comet_cc/skills/comet-cc-memory"
